<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/ddf_divider_margin" >
    
	<TableLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
	
	    <TableRow
	        android:id="@+id/TableRow04"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1" >
	
	        <TextView
	            android:id="@+id/TextView02"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_span="2"
	            android:layout_weight="1"
	            android:text="@string/About_copyright" />

	    </TableRow>
	
	    <TableRow
	        android:id="@+id/TableRow03"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/TextView01"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_span="2"
	            android:text="@string/About_team" />
	    </TableRow>
	
	    <TableRow
	        android:id="@+id/TableRow02"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/txt_dialog_version"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_span="2" />
	
	    </TableRow>

	    <TableRow
	        android:id="@+id/tableRow8"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >

	        <TextView
	            android:id="@+id/textView12"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" />

	    </TableRow>
	
	    <TableRow
	        android:id="@+id/TableRow01"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/TextView04"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/Dev_Project_Coordinator" />
	
	        <TextView
	            android:id="@+id/textView6"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/BF" />
	
	    </TableRow>
	
	    <TableRow
	        android:id="@+id/TableRow05"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/TextView03"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/Dev_Android_Developer" />
	
	        <TextView
	            android:id="@+id/textView7"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/VL" />
	
	    </TableRow>
	
	    <TableRow
	        android:id="@+id/tableRow1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/textView1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/Dev_Embedded_Developer" />
	
	        <TextView
	            android:id="@+id/textView8"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/DS" />
	
	    </TableRow>
	
	    <TableRow
	        android:id="@+id/tableRow2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/textView2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/Dev_Board_Design" />
	
	        <TextView
	            android:id="@+id/textView9"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/PM" />
	
	    </TableRow>
	
	    <TableRow
	        android:id="@+id/tableRow3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/textView3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_span="2" />
	
	    </TableRow>
	
	    <TableRow
	        android:id="@+id/tableRow4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/textView4"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_span="2"
	            android:text="@string/Dev_Exosite_Support_1" />
	    </TableRow>
	
	    <TableRow
	        android:id="@+id/tableRow5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/textView5"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_span="2"
	            android:text="@string/Dev_Exosite_Support_2" />
	    </TableRow>
	
	    <TableRow
	        android:id="@+id/tableRow6"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/textView10"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_span="2"
	            android:text="@string/Dev_Exosite_Support_3" />
	
	    </TableRow>
	
	    <TableRow
	        android:id="@+id/tableRow7"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/textView11"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_span="2" />
	
	    </TableRow>	
	</TableLayout>
	
	<LinearLayout
	    android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="horizontal" >
	    
	    <Button
	        android:id="@+id/about_btn_privacy_policy"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/privacy_policy" />
	
        <Button
            android:id="@+id/about_btn_terms_of_use"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/terms_of_use" />
        
	</LinearLayout>
	
</LinearLayout>